user specification to build transaction query based on query params
